# ReX

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  MUTANTS.md  README.md  example.rex.toml  pyproject.toml
.github/workflows/: build-and-test-python-package.yml  linting-and-type-check.yml  publish.yml  python-package.yml  test-package-and-comment.yml  test-python-package.yml
docs/: background.md  command_line.md  conf.py  config.md  contrastive.md  index.md  index.rst  multiple.md  script.md
docs/notebooks/: intro.md
imgs/: DoublePeakClass 2 Mean.npy  blues.npy
notes/: notes.norg
rex_ai/: __init__.py  _utils.py  box.py  config.py  database.py  distributions.py  evaluation.py  explanation.py  extraction.py  input_data.py  logger.py  multi_explanation.py  mutant.py  occlusions.py  onnx.py  prediction.py  resp_maps.py  responsibility.py  rex.py  visualisation.py
rex_xai/: _utils.py  box.py  config.py  database.py  distributions.py  evaluation.py  explanation.py  extraction.py  input_data.py  logger.py  multi_explanation.py  mutant.py  occlusions.py  onnx.py  prediction.py  resp_maps.py  responsibility.py  rex.py  rex_wrapper.py  visualisation.py
rex_xai/explanation/: evaluation.py  explanation.py  multi_explanation.py  rex.py
rex_xai/input/: config.py  input_data.py  onnx.py
rex_xai/mutants/: box.py  distributions.py  mutant.py  occlusions.py
rex_xai/output/: database.py  visualisation.py
rex_xai/responsibility/: prediction.py  responsibility.py
rex_xai/utils/: _utils.py
scripts/: audio_pytorch.py  process_db.py  pytorch.py  spectral_pytorch.py  timm_script.py
tests/: _explanation_onnx_test.py  _explanation_test.py  _explanation_test_onnx.py  box_test.py  conftest.py  data_test.py  explanation_test.py  spectral_test.py  visualisation_test.py  visulisation_test.py
tests/__snapshots__/: _explanation_onnx_test.ambr  _explanation_test.ambr  _explanation_test_onnx.ambr  explanation_test.ambr
tests/long_tests/: _explanation_onnx_test.py  _explanation_test.py  explanation_test.py
tests/long_tests/__snapshots__/: _explanation_test.ambr  explanation_test.ambr  spectral_test.ambr
tests/scripts/: pytorch.py  pytorch_3d.py  pytorch_resnet50.py  pytorch_swin_v2_t.py
tests/snapshot_tests/: _explanation_onnx_test.py  _explanation_test.py  explanation_test.py  load_preprocess_test.py  multi-explanation_test.py  spectral_test.py
tests/snapshot_tests/__snapshots__/: _explanation_onnx_test.ambr  (+5 more)
tests/test_data/: DoublePeakClass 0 Mean.npy  DoublePeakClass 1 Mean.npy  positive193.npy  rex-test-all-config.toml  spectrum_class_DNA.npy  spectrum_class_noDNA.npy
tests/unit_tests/: box_test.py  cmd_args_test.py  config_test.py  data_test.py  database_test.py  multi-explanation_test.py  preprocess_test.py  preprocessing_test.py  validate_args_test.py  visualisation_test.py
